--- a/Макет-2/styles/style.css
+++ b/Макет-2/styles/style.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.studio {
+    text-align: right;
+}
+.main {
+}
+.footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+}
