--- a/Макет 4/styles/style.scss
+++ b/Макет 4/styles/style.scss
@@ -19,6 +19,10 @@ $screen-xsm-max: 350px;
             margin-top: 35px;
         }
     }
+    .content {
+        &__burger {
+        }
+    }
 }
 @media (min-width: $screen-lg) {
     .columns {
