--- a/Macbook-6/style.css
+++ b/Macbook-6/style.css
@@ -1,33 +1,36 @@
-html{
-    margin:0;
-    padding:0;
+html {
+    margin: 0;
+    padding: 0;
 }
-.profilePicture{
+.storyPicture {
     background-color: rgb(223, 223, 223);
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
+    width: 9vw;
+    height: 9vw;
+    max-width: 90px;
+    max-height: 90px;
+    min-width: 50px;
+    min-height: 50px;
+    border-radius: 50%;
 }
-.storyPicture{
-    background-color: rgb(223, 223, 223);
-    width: 70px;
-    height: 70px;
-    border-radius: 40px;
-}
-.iconGroup{
+.iconGroup {
     background-color: rgb(160, 160, 160);
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
+    width: 9vw;
+    height: 9vw;
+    max-width: 90px;
+    max-height: 90px;
+    min-width: 50px;
+    min-height: 50px;
+    border-radius: 50%;
 }
-.imageSocialMedia{
+.imageSocialMedia {
     background-color: rgb(160, 160, 160);
     width: 100%;
-    height: 400px;
+    height: 45vw;
     display: flex;
     justify-content: center;
 }
-.hero{
+.hero {
+    width: 95vw;
+    margin: 0 auto;
     margin-bottom: 50px;
-    margin-left: 20px;
 }
