--- a/Macbook-6/style.css
+++ b/Macbook-6/style.css
@@ -34,3 +34,9 @@ html {
     margin: 0 auto;
     margin-bottom: 50px;
 }
+@media (max-width: 767px) {
+    .image {
+        width: 37px;
+        height: auto;
+    }
+}
