--- a/style3.css
+++ b/style3.css
@@ -12,5 +12,12 @@
     line-height: 1;
 }
 
+@media (max-width: 1024px) {
+    .flex-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 
