--- a/Macbook-3/style3.css
+++ b/Macbook-3/style3.css
@@ -1,22 +1,30 @@
-﻿
+body {
+    position: relative;
+    min-height: 100vh;
+}
 .main_container_button .button {
     width: 100%;
 }
 
-
 .button_text {
     width: 100%;
+    padding: 20px 0;
 }
 
-.text1{
+.studio {
+    position: absolute;
+    bottom: 1vh;
+    right: 2vw;
+}
+
+.text1 {
     line-height: 1;
 }
-.baton{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    flex-direction: row;
+
+@media (max-width: 767px) {
+    .flex-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
-
-
