--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ html{
 }
 .imageSocialMedia{
     background-color: rgb(160, 160, 160);
-    width: 100%;
-    height: 400px;
-    display: flex;
+    max-width: 100%;
+    height: 300px;
+    display: block;
     justify-content: center;
 }
 .hero{
